# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko2/git-branch-harjoitus/: index.py  tulo.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/tests/: home.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
