[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["lahgit <jesse.lahti@helsinki.fi>"]
license = "README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
